@@ -103,6 +103,15 @@ Unreleased
 
 - Fixed bug in workflow where unicode was breaking status messages.
 
+- Fixed bug in karl.views.utils._get_user_homepath.  Was expecting traverser
+  to return a list for subpath but traverser was returning a tuple.
+
+- Fixed bug displaying "system" profiles.  Karl instances generally have one
+  system profile, "admin", that does not have an entry in site.users, since
+  the profile is not used to log into the site but only as a placeholder user
+  profile for associating with events generated by the system, usually when
+  bootstrapping a new Karl.
+
 3.15 (2009-12-14)
 -----------------
 
